# oneid-sdk

./: .gitignore  README.md  pyproject.toml
oneid/: __init__.py  __main__.py  _http.py  _self_heal.py  _version.py  attestation.py  auth.py  client.py  credential_pointers.py  credentials.py  devices.py  enroll.py  exceptions.py  helper.py  identity.py  keys.py  mailpal.py  trust_roots.py  verify.py  world.py
tests/: conftest.py  test_attestation_and_mailpal.py  test_credentials.py  test_enroll_declared.py  test_exceptions.py  test_full_regression.py  test_get_only_status_and_world.py  test_http_shim.py  test_identity.py  test_integration_declared_enrollment_against_live_server.py  test_integration_token_refresh_against_live_server.py  test_keys.py  test_sovereign_enrollment_round_trip.py  test_token.py
