[build-system]
requires = ["setuptools>=68.0,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oneid"
version = "1.4.2"
description = "Hardware-anchored identity SDK for AI agents -- 1id.com"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
  {name = "Christopher Drake", email = "chris@1id.com"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: Security :: Cryptography",
  "Topic :: System :: Hardware",
]
keywords = ["identity", "ai", "agent", "tpm", "yubikey", "piv", "hardware", "oidc", "oauth2", "sybil"]

dependencies = [
  # httpx pulls httpcore transitively; httpcore < 1.0.9 has a bug that
  # breaks our HTTPS calls (observed 2026-07-21 on 1.0.7). Pin the floor
  # EXPLICITLY so `pip install oneid` / `pip install -U oneid` resolve a
  # good httpcore automatically -- no manual upgrade, no blocked install.
  # A floor (not a pin) never blocks; oneid/_self_heal.py additionally
  # repairs an ALREADY-installed broken httpcore at import time.
  "httpx>=0.27.0",
  "httpcore>=1.0.9",
  "cryptography>=41.0",
]

[project.optional-dependencies]
mx = ["dnspython>=2.4"]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.1.0",
  "mypy>=1.0",
]

[project.urls]
Homepage = "https://1id.com"
Documentation = "https://1id.com/enroll.md"
Repository = "https://github.com/1id-com/oneid-sdk"
Issues = "https://github.com/1id-com/oneid-sdk/issues"

[tool.setuptools.packages.find]
include = ["oneid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN"]
ignore = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
